--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-﻿# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# compiled output
+﻿# compiled output
 /dist
 /tmp
 /out-tsc
+/wwwroot
 
 # dependencies
 /node_modules
