--- a/src/BookingSystem/package.json
+++ b/src/BookingSystem/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^4.3.2",
     "@angular/platform-browser-dynamic": "^4.3.2",
     "@angular/router": "^4.3.2",
+    "@types/hammerjs": "^2.0.34",
     "angular-in-memory-web-api": "^0.3.2",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
