--- a/src/BookingSystem/package.json
+++ b/src/BookingSystem/package.json
@@ -31,7 +31,8 @@
     "material-design-icons": "^3.0.1",
     "moment": "^2.18.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.16"
+    "zone.js": "^0.8.16",
+    "angular-2-local-storage":"^1.0.1"
   },
   "devDependencies": {
     "@angular/cli": "1.2.1",
@@ -40,6 +41,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.85",
+    "angular-2-local-storage": "^1.0.1",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
@@ -52,6 +54,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.3",
+    "angular-2-local-storage":"^1.0.1"
   }
 }
